Finished search result buttons responsiveness and fixed player role not fitting on the player clan card

--- a/src/styles/components/_playercards.scss
+++ b/src/styles/components/_playercards.scss
@@ -16,7 +16,7 @@
     background-color: $secondary-background-color;
     border-radius:  $border-radius-sm 0 0 $border-radius-sm;
     border-right: 3px solid $primary-color;
-    height: 110px;
+    height: 125px;
 }
 
 @media (max-width: 460px) {
@@ -61,24 +61,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: $spacing-medium;
-    margin-right: $spacing-xsmall;
+    margin: 0 $spacing-xsmall 0 $spacing-small;
+    width: 50px;
     position: relative;
-}
-
-#player-clan-role {
-    text-wrap: nowrap;
-    position: absolute;
-    bottom: -13px;
-    padding: 1px 5px;
-    color: $offwhite-two;
 }
 
 #player-clan-badge {
     margin: auto;
     height: 55px;
-    position: relative;
-    bottom: 10px;
 }
 
 #progress-base-cards {
